--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,1 @@
-<body>
-  <div class="form-container">
-    <ul class="list">
-      <li><h2>Member Login</h2></li>
-      <li><input type="text" name="username" placeholder="Username" /></li>
-      <li><input type="password" name="password" placeholder="**********" /></li>
-      <li><input type="button" name="Submit" value="LogIn" /></li>
-      <li><input type="button" name="Submit" value="Register" /></li>
-      <li>Forgot password ?</li>
-    </ul>
-  </div>
-</body>
+<router-outlet></router-outlet>
