--- a/src/app/reg/reg.component.html
+++ b/src/app/reg/reg.component.html
@@ -6,7 +6,7 @@
       <li><input type="password" name="password" placeholder="Password" /></li>
       <li><input type="password" name="password" placeholder="Confirm password" /></li>
       <li><input type="email" name="email" placeholder="Enter E-mail" /></li>
-      <li><input type="button" name="Submit" value="Submit" /></li>
+      <li><input type="button" name="Submit" routerLink="/Login" value="Submit" /></li>
     </ul>
   </div>
 </body>
