--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
       <li><h2>Member Login</h2></li>
       <li><input type="text" name="username" placeholder="Username" /></li>
       <li><input type="password" name="password" placeholder="**********" /></li>
-      <li><input type="button" name="Submit" routerLing="/Analysis" value="LogIn" /></li>
+      <li><input type="button" name="Submit" routerLink="/Analysis" value="LogIn" /></li>
       <li><input type="button" name="Submit" routerLink="/Register" value="Register" /></li>
       <li>Forgot password ?</li>
     </ul>
