--- a/src/app/newsinput/newsinput.component.css
+++ b/src/app/newsinput/newsinput.component.css
@@ -1,12 +1,32 @@
+.fileUpload {
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+}
+.fileUpload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
 input[type=text], select {
     width: 50%;
     padding: 52px 50px;
-    margin: 8px 0;
+    margin: 50px 0px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 20px;
     box-sizing: border-box;
     background-color: yellow;
+    text-align: center;
+    position: absolute;
+    left: 600px;
   }
 
   input[type=url], select {
@@ -18,6 +38,10 @@ input[type=text], select {
     border-radius: 20px;
     box-sizing: border-box;
     background-color: yellow;
+    text-align: center;
+    position: absolute;
+    left: 600px;
+    top:250px;
   }
 
   input[type=submit]:hover {
@@ -27,17 +51,6 @@ input[type=text], select {
   
 input[type=submit] {
     width: 10%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 20px 0;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-
-  input[type=file] {
-    width: 20%;
     background-color: #000000;
     color: white;
     padding: 14px 20px;
@@ -45,4 +58,24 @@ input[type=submit] {
     border: none;
     border-radius: 20px;
     cursor: pointer;
+    position: relative;
+    left: 1000px;
+    top:200px;
   }
+
+
+  .navbar{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #FFFF00;
+    text-align: initial;
+  }
+
+  
+      
+  
+  
+    
+  
