--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -1,30 +1,20 @@
-<h1>News Analysis</h1>
 
+<div class="navbar">
+  <p><b> <span style='font-size:15px;'>&#10765;</span> Fake News Detector</b></p>
+</div>
 <div>
   <form action="/action_page.php">
     
     <input type="text" id="text" name="news" placeholder="Some text..">
 
-    <br>
-
     <input type="url" id="url text" name="link" placeholder="Some Url..">
 
-    <br>
-    
-    <p><strong>Upload Image</strong></p>
-    <input type="file" id="img" name="img" accept="image/*">
-    
-    <br>
-
-    <p><strong>Upload Audio</strong></p>
-
-    <input type="file" id="audio" name="audio" accept="audio/*">
-
-    <br>
-
-    
-
-    <input type="submit" value="Submit">
+    <div class="fileUpload btn btn-primary">
+      <span>Upload</span>
+      <input type="file" class="upload" />
+  </div>
+  
+   <input type="submit" value="Submit">
 
   </form>
 </div>
