--- a/src/app/newsinput/newsinput.component.css
+++ b/src/app/newsinput/newsinput.component.css
@@ -1,22 +1,8 @@
-.fileUpload {
-  position: relative;
-  overflow: hidden;
-  margin: 10px;
-}
-.fileUpload input.upload {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-  cursor: pointer;
-  opacity: 0;
-  filter: alpha(opacity=0);
-}
 
-input[type=text], select {
+
+input[type="text"], select {
     width: 50%;
+    height:30%;
     padding: 52px 50px;
     margin: 50px 0px;
     display: inline-block;
@@ -30,8 +16,8 @@ input[type=text], select {
   }
 
   input[type=url], select {
-    width: 50%;
-    padding: 29px 50px;
+    width: 30%;
+    padding:20px 80px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
@@ -40,56 +26,51 @@ input[type=text], select {
     background-color: yellow;
     text-align: center;
     position: absolute;
-    left: 600px;
+    left: 50px;
     top:250px;
   }
 
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-
   
-input[type=submit] {
-    width: 10%;
-    background-color: #000000;
-    color: white;
-    padding: 14px 20px;
-    margin: 20px 0;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    position: relative;
-    left: 1000px;
-    top:200px;
-  }
-
-
-  .navbar{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #FFFF00;
-    text-align: initial;
-  }
-
-  body{
-    background: black !important;
-    height:100vh;
-}
-
-.fa-cloud-upload{
-  font-size: 70px;
-  padding: 40px;
+ input[type=file]{
+  width:30%;
+  height:20%;
+  padding: 52px 100px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background-color: yellow;
+  position: absolute;
+  top:110px;
+  left:50px;
+ }
+ 
+ .button {
+  padding: 15px 25px;
+  font-size: 24px;
   text-align: center;
-  width: 100%;
-  margin: auto;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #000000;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  position: absolute;
+  bottom:150px;
+  right:70px
 }
 
-.bg-orange{
-  background-color: #FF9800;
-  border: 2px solid white;
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
+
+
 
   
       
