--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -1,14 +1,7 @@
-<div class="container-fluid mt-5">
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="card bg-orange">
-        <div class="card-body">
-          <i class="fa fa-cloud-upload" aria-hidden="true"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <textarea class="form-control bg-orange" rows="8" name="news">Enter text here...</textarea>
-    </div>
-  </div>
-</div>
+<input type="text" id="text" name="news" placeholder="Enter the news">
+<input type="url" id="link" name="Wlink" placeholder="Enter the url">
+<input type="file" id="myFile" name="filename">
+<button class="button">Check</button>
+
+
+
