--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -1,7 +1,14 @@
-<input type="text" id="text" name="news" placeholder="Enter the news">
-<input type="url" id="link" name="Wlink" placeholder="Enter the url">
-<input type="file" id="myFile" name="filename">
-<button class="button">Check</button>
-
-
-
+<div class="container">
+<div class="row">
+  <input class="form-control form-control-lg" type="text" placeholder="Enter the news">
+  <input class="form-control form-control-lg" type="Url" placeholder="Enter the Url">
+ <div class="image-upload" id="image1">
+    <label for="file-input">
+        <img src="https://goo.gl/pB9rpQ"/>
+    </label>
+  <input class="Imagefile" type="file" id="img" name="Image" accept="image/*">
+  </div>
+  <input class="Imagefile" type="file" id="aud" name="Audio" accept="audio/*">
+  <button class="button">Check</button>
+</div>
+</div>
