--- a/src/app/newsinput/newsinput.component.css
+++ b/src/app/newsinput/newsinput.component.css
@@ -31,7 +31,7 @@ input[type="text"], select {
   }
 
   
- input[type=file]{
+ #img{
   width:30%;
   height:20%;
   padding: 52px 100px;
@@ -44,6 +44,21 @@ input[type="text"], select {
   position: absolute;
   top:110px;
   left:50px;
+ }
+
+ #aud{
+  width:30%;
+  height:20%;
+  padding: 52px 100px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background-color: yellow;
+  position: absolute;
+  bottom:110px;
+  right:350px;
  }
  
  .button {
@@ -66,8 +81,21 @@ input[type="text"], select {
 
 .button:active {
   background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  box-shadow: 2px 2px #666;
   transform: translateY(4px);
+}
+.image-upload > input
+{
+    display: none;
+}
+
+.image-upload img
+{
+    width: 80px;
+    cursor: pointer;
+    font-variant-position: normal;
+    position: relative;
+    top:150px;
 }
 
 
