--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <i class="fa fa-shield icon-style"></i>
     <h1 class="navbar-brand">{{title}}</h1>
   </a>
-  <a routerLink="/logout" class="nav-link">LogOut</a>
+  <a routerLink="/logout" class="nav-link">Logout</a>
 </nav>
 
 
