--- a/src/app/newsinput/newsinput.component.css
+++ b/src/app/newsinput/newsinput.component.css
@@ -2,7 +2,7 @@
 
 input[type="text"], select {
     width: 50%;
-    height:30%;
+    height:40%;
     padding: 52px 50px;
     margin: 50px 0px;
     display: inline-block;
@@ -13,6 +13,7 @@ input[type="text"], select {
     text-align: center;
     position: absolute;
     left: 600px;
+  
   }
 
   input[type=url], select {
@@ -44,6 +45,7 @@ input[type="text"], select {
   position: absolute;
   top:110px;
   left:50px;
+  z-index: -1;
  }
 
  #aud{
@@ -95,8 +97,11 @@ input[type="text"], select {
     cursor: pointer;
     font-variant-position: normal;
     position: relative;
-    top:150px;
+    top:90px;
+    left:50px;
+    
 }
+
 
 
 
