--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -8,9 +8,9 @@
         <img src="https://goo.gl/pB9rpQ"/>
     </label>
     
-  <input class="Imagefile" type="file" id="img" name="Image" accept="image/*">
+  <input class="Imagefile" type="file" id="img" name="Image" accept="image/*" src="C:\Users\dell\Desktop\angular">
   </div>
-  <input class="Imagefile" type="file" id="aud" name="Audio" accept="audio/*">
+  <input class="Imagefile" type="file" id="aud" name="Audio" accept="audio/*" src="C:\Users\dell\Desktop\angular">
   <button class="button">Check</button>
 </div>
 </div>
