--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,12 @@
+<form>
 <div class="form-container">
     <ul class="list">
       <li><h2>Member Login</h2></li>
-      <li><input type="text" name="username" placeholder="Username" /></li>
-      <li><input type="password" name="password" placeholder="**********" /></li>
+      <li><input type="text" name="username" placeholder="Username" autofocus /></li>
+      <li><input type="password" name="pwd" placeholder="**********" /></li>
       <li><input type="button" name="Submit" routerLink="/Analysis" value="LogIn" /></li>
       <li><input type="button" name="Submit" routerLink="/Register" value="Register" /></li>
       <li>Forgot password ?</li>
     </ul>
   </div>
+  </form>
