--- a/src/app/reg/reg.component.html
+++ b/src/app/reg/reg.component.html
@@ -1,12 +1,13 @@
-<body>
+
   <div class="form-container">
     <ul class="list">
       <li><h2>Member Login</h2></li>
-      <li><input type="text" name="username" placeholder="Username" /></li>
-      <li><input type="password" name="password" placeholder="Password" /></li>
-      <li><input type="password" name="password" placeholder="Confirm password" /></li>
+      <li><input type="text" name="username" placeholder="Username" autofocus /></li>
+      <li><input type="password" name="pwd" placeholder="Password" /></li>
+      <li><input type="number" name="number" placeholder="+91-1234567890" /></li>
       <li><input type="email" name="email" placeholder="Enter E-mail" /></li>
-      <li><input type="button" name="Submit" routerLink="/Login" value="Submit" /></li>
+      <li><input type="date" name="dob"/></li>
+      <li><input type="button" name="Submit" routerLink="/Login" value="Register" /></li>
+      
     </ul>
   </div>
-</body>
