--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,11 @@
-<nav class="navbar style sticky-top navbar-light">
-  <a routerLink="/">
-    <i class="fa fa-shield icon-style"></i>
-    <h1 class="navbar-brand">{{title}}</h1>
-  </a>
-  <a routerLink="/logout" class="nav-link">Logout</a>
-</nav>
-
-
-
-
-
-
+<div class='navbar'>
+  <mat-toolbar color="primary" class="mat-elevation-z4" >
+      <span><mat-icon>security</mat-icon>Fake News Detector</span>
+  <div class="spacer"></div>
+      <a mat-button>Home</a>
+      <a mat-button>Services</a>
+      <a mat-button>About us</a>
+      <a mat-raised-button color="accent">sign up?</a>
+      <a mat-raised-button color="accent">logout</a>
+  </mat-toolbar>
+  </div>
