--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,39 +1,3 @@
-.style
-{
-    background-color: #FFFF00;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
-    
-}
-body{
-    margin:0px;
-}
-.navbar-light .navbar-brand {
-    color:black;
-    font-weight: 100;
-    font-size:20px;
-    letter-spacing: 0.3px;
-    text-transform: uppercase;
-    padding-left: 10px;
-    position: absolute;
-    top:0px;
-
-}
-
-a{
-    text-decoration: none;
-    color: black;
-}
-
-.navbar{
-    height: 40px;
-}
-
-.icon-style{
-    font-size: 24px;
-}
-
-.nav-link{
-    position: absolute;
-    right: 50px;
-    top:15px;
+.spacer{
+    flex:1 1 auto;
 }
