--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -13,8 +13,9 @@ body {
   border-radius: 10px;
   margin:auto;
   box-shadow:0 0 10px 0 #000;
-  position:relative;
-  top:50px;
+  position:absolute;
+  top:110px;
+  left:35%
 }
 
 ul.list{
