--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -3,13 +3,7 @@
 <div class="row">
   <input class="form-control form-control-lg" type="text" placeholder="Enter the news">
   <input class="form-control form-control-lg" type="Url" placeholder="Enter the Url">
- <div class="image-upload" id="image1">
-    <label for="file-input">
-        <img src="https://goo.gl/pB9rpQ"/>
-    </label>
-    
-  <input class="Imagefile" type="file" id="img" name="Image" accept="image/*" src="C:\Users\dell\Desktop\angular">
-  </div>
+  <input class="Audiofile" type="file" id="img" name="Image" accept="image/*" src="C:\Users\dell\Desktop\angular">
   <input class="Imagefile" type="file" id="aud" name="Audio" accept="audio/*" src="C:\Users\dell\Desktop\angular">
   <button class="button">Check</button>
 </div>
