--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -1,9 +1,8 @@
 <div class="container">
- 
 <div class="row">
   <input class="form-control form-control-lg" type="text" placeholder="Enter the news">
   <input class="form-control form-control-lg" type="Url" placeholder="Enter the Url">
-  <input class="Audiofile" type="file" id="img" name="Image" accept="image/*" src="C:\Users\dell\Desktop\angular">
+  <input class="Imagefile" type="file" id="img" name="Image" accept="image/*" src="C:\Users\dell\Desktop\angular">
   <input class="Imagefile" type="file" id="aud" name="Audio" accept="audio/*" src="C:\Users\dell\Desktop\angular">
   <button class="button">Check</button>
 </div>
