--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class='navbar'>
-  <mat-toolbar color="primary" class="mat-elevation-z4" >
+  <mat-toolbar color="primary" class="mat-elevation-z4  header-bg" >
       <span><mat-icon>security</mat-icon>Fake News Detector</span>
   <div class="spacer"></div>
       <a mat-button>Home</a>
