--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,8 +5,8 @@
         <li><h2>Member Login</h2></li>
         <li><input type="text" id="Email"name="Email" placeholder="Enter Email" formControlName="Email" /></li>
         <li><input type="password" id="Password" name="password" placeholder="**********" formControlName="Password"/></li>
-        <li><input type="submit" name="Login" routerLink="/analysis" value="LogIn" routerlink='input' /></li>
-        <li><input type="button" name="Register" routerLink="/Register" value="Register" routerlink="register" /></li>
+        <li><input type="submit" name="Login" value="LogIn" routerlink='/NewsInput' /></li>
+        <li><input type="button" name="Register" value="Register" routerlink="/Register" /></li>
       </ul>
     </form>
   </div>
