--- a/src/app/newsinput/newsinput.component.html
+++ b/src/app/newsinput/newsinput.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="row">
+   <app-header></app-header>
+  </div>
 <div class="row">
   <input class="form-control form-control-lg" type="text" placeholder="Enter the news">
   <input class="form-control form-control-lg" type="Url" placeholder="Enter the Url">
